mlv-1.2.1
 * Image and text :
   * Wa move MLV_save_screen() and MLV_load_screen() inside MLV_image.h
   * Text functions can construct strings by using extra arguments.
   * Add text functions with va_list argument.
 * Window :
   * We Add the funtion MLV_clear_window() allowing to clear the window. 
   * We add MLV_create_full_screen_window_with_font().
   * We add MLV_get_desktop_width()
   * We add MLV_get_desktop_height()
   * We add MLV_get_desktop_size()
 * Example :
   * We add medium/12_desktop_size.c
   * We mov beginer/10_keys_codes.c to beginer/11_keys_code.c
 * API :
   * Complete xml functions with va_list argument.
   * We put in different headers the prototype of functions with va_list 
     argument.
 * BUG :
   * The function MLV_draw_text_box_on_image() is now implemented.  
   * The function MLV_create_full_screen_window() is now implemented.  
 * Examples :
   * Add a new example medium/10_keys_code allowing to know the sym, mod
     and unicode of keyboard events.
   * For the example, we choose key compatible with azerty and qwerty.
     This is to help the user to understand how the examples works.
* packaging :
   * We normailze the debian package to follow the Debian Policy.
     Now Lintian do not produce errors.
 * Documentation:
   * We add a FAQ in the web documentation.
   * We add procedures explain how to publish a new verion of the MLV library.
 * Mac OS X 10.9 Problem :
   * We remove all inline functions to solve the flat namespace problem.
     Mac OS 10.9 Programs doesn't arrive to find function declared as 
     inlined during the exectution of the program (when the functions are not
     inlined).

mlv-0.6
  * API :
    * The sound api has been completely rewritten. 
    * Add an animation API.
    * Add an xml API to read xml file.
    * Add a path API to work with paths.
    * Lots of name uniformisations have been performed.
    * Suppresion of the anglicism evenement in the API. Only headers